# superpixel_densecrf

./: CMakeCache.txt  CMakeLists.txt  Makefile  \  cmake_install.cmake  eval.py  eval_shell.py  j2seg.cpp  main_201701181100.cpp  main_201701201147.cpp  superpixel_crf
include/: densecrf.h
pic/dog/: test_dog.ppm
